--- a/Project-Chatbot/package.json
+++ b/Project-Chatbot/package.json
@@ -2,14 +2,19 @@
   "name": "Project-Chatbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node":"10.15.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.18.3",
+    "express": "^4.16.4",
     "fast-csv": "^2.4.1",
     "fs": "0.0.1-security",
     "mongodb": "^3.2.2",
